--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-Package              Version
--------------------- ---------
-arrow                1.1.1
-asgiref              3.4.1
-certifi              2021.5.30
-charset-normalizer   2.0.6
-Django               3.2.7
-django-widget-tweaks 1.4.8
-idna                 3.2
-pagseguro            0.3.4
-pip                  21.2.4
-python-dateutil      2.8.2
-pytz                 2021.1
-requests             2.26.0
-setuptools           57.4.0
-six                  1.16.0
-sqlparse             0.4.1
-urllib3              1.26.6
-wheel                0.37.0
-xmltodict            0.12.0
+arrow==1.1.1
+asgiref==3.4.1
+certifi==2021.5.30
+charset-normalizer==2.0.6
+dj-database-url==0.5.0
+Django==3.2.7
+django-heroku==0.0.0
+django-watson==1.5.5
+django-widget-tweaks==1.4.8
+easy-thumbnails==2.7.1
+idna==3.2
+Pillow==8.3.2
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+six==1.16.0
+sqlparse==0.4.1
+urllib3==1.26.6
+whitenoise==5.3.0
+xmltodict==0.12.0
+gunicorn==20.0.4
