--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ charset-normalizer==2.0.6
 dj-database-url==0.5.0
 Django==3.2.7
 django-heroku==0.0.0
+django-on-heroku==1.1.2
 django-watson==1.5.5
 django-widget-tweaks==1.4.8
 easy-thumbnails==2.7.1
+gunicorn==20.1.0
 idna==3.2
 Pillow==8.3.2
+psycopg2-binary==2.9.1
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
@@ -18,4 +21,3 @@ sqlparse==0.4.1
 urllib3==1.26.6
 whitenoise==5.3.0
 xmltodict==0.12.0
-gunicorn==20.0.4
